--- a/bananas.html
+++ b/bananas.html
@@ -3,7 +3,7 @@
         <body>
             <nav>
                 <a href="/">
-                    <h1>Bogus Deal Breaker</h1>
+                    <h1>Bananas - Bogus Deal Breaker</h1>
                 </a>
                 <h3>Spot the <em>real</em> deals!</h3>
             </nav>
